grammar.js
    source_file: ($) => repeat($._module_member),

    _module_member: ($) =>
      choice(
        $.module_attribute,
        $.function_definition,
        $.proc_definition,
        $.proc_alias,
        $.import_statement,
        $.use_statement,
        $.type_alias,
        $.struct_definition,
        $.enum_definition,
        $.constant_definition,
        $.impl_block,
        $.trait_definition,
        $.const_assert_statement,
      ),

    module_attribute: ($) => seq("#", "!", $.attribute_body),

    attribute: ($) => seq("#", $.attribute_body),

    attribute_body: ($) =>
      seq(
        "[",
        field("name", $.identifier),
        optional(field("arguments", $.attribute_arguments)),
        "]",
      ),

    attribute_arguments: ($) =>
      seq("(", optional(commaSep1($.attribute_argument)), optional(","), ")"),

    attribute_argument: ($) =>
      choice(
        seq(field("name", $.identifier), "=", field("value", $.attribute_value)),
        $.attribute_value,
      ),

    attribute_value: ($) =>
      choice(
        $.string_literal,
        $.backtick_string_literal,
        $.integer_literal,
        $.boolean_literal,
        $.identifier,
      ),

    visibility_modifier: (_) => "pub",

    function_definition: ($) =>
      seq(
        repeat(field("attribute", $.attribute)),
        optional(field("visibility", $.visibility_modifier)),
        "fn",
        field("name", choice($.identifier, $.macro_identifier)),
        optional(field("parametrics", $.parametric_bindings)),
        field("parameters", $.parameter_list),
        optional(seq("->", field("return_type", $.type_annotation))),
        choice(field("body", $.block), ";"),
      ),

    parameter_list: ($) =>
      seq("(", optional(commaSep1($.parameter)), optional(","), ")"),

    parameter: ($) =>
      choice(
        seq(
          field("name", "self"),
          optional(seq(":", field("type", $.type_annotation))),
        ),
        seq(
          field("name", $.identifier),
          ":",
          field("type", $.type_annotation),
        ),
      ),

    parametric_bindings: ($) =>
      seq("<", commaSep1($.parametric_binding), optional(","), $._close_angle),

    parametric_binding: ($) =>
      seq(
        field("name", $.identifier),
        ":",
        field("type", $.type_annotation),
        optional(
          seq(
            "=",
            field(
              "default",
              choice($.braced_parametric_argument, $.parametric_argument),
            ),
          ),
        ),
      ),

    import_statement: ($) =>
      seq(
        "import",
        field("path", $.import_path),
        optional(seq("as", field("alias", $.identifier))),
        ";",
      ),

    import_path: ($) => seq($.identifier, repeat(seq(".", $.identifier))),

    use_statement: ($) => seq("use", field("tree", $.use_tree), ";"),

    use_tree: ($) =>
      prec.right(seq(
        field("path", choice($.identifier, "self")),
        optional(
          seq(
            "::",
            choice(
              field("child", $.use_tree),
              seq("{", optional(commaSep1($.use_tree)), optional(","), "}"),
            ),
          ),
        ),
        optional(seq("as", field("alias", $.identifier))),
      )),

    type_alias: ($) =>
      seq(
        repeat(field("attribute", $.attribute)),
        optional(field("visibility", $.visibility_modifier)),
        "type",
        field("name", $.identifier),
        "=",
        field("type", $.type_annotation),
        ";",
      ),

    struct_definition: ($) =>
      seq(
        repeat(field("attribute", $.attribute)),
        optional(field("visibility", $.visibility_modifier)),
        "struct",
        field("name", $.identifier),
        optional(field("parametrics", $.parametric_bindings)),
        field("body", $.struct_body),
      ),

    struct_body: ($) =>
      seq("{", optional(commaSep1($.struct_member)), optional(","), "}"),

    struct_member: ($) =>
      seq(
        repeat(field("attribute", $.attribute)),
        field("name", $.identifier),
        ":",
        field("type", $.type_annotation),
      ),

    enum_definition: ($) =>
      seq(
        repeat(field("attribute", $.attribute)),
        optional(field("visibility", $.visibility_modifier)),
        "enum",
        field("name", $.identifier),
        optional(seq(":", field("underlying_type", $.type_annotation))),
        "{",
        optional(commaSep1($.enum_member)),
        optional(","),
        "}",
      ),

    enum_member: ($) =>
      seq(field("name", $.identifier), "=", field("value", $.expression)),

    constant_definition: ($) =>
      seq(
        optional(field("visibility", $.visibility_modifier)),
        "const",
        field("name", $.identifier),
        optional(seq(":", field("type", $.type_annotation))),
        "=",
        field("value", $.expression),
        ";",
      ),

    impl_block: ($) =>
      seq(
        optional(field("visibility", $.visibility_modifier)),
        "impl",
        field("type", $.type_annotation),
        "{",
        repeat($.impl_member),
        "}",
      ),

    impl_member: ($) =>
      choice($.function_definition, $.constant_definition, $.type_alias),

    proc_alias: ($) =>
      seq(
        repeat(field("attribute", $.attribute)),
        optional(field("visibility", $.visibility_modifier)),
        "proc",
        field("name", $.identifier),
        "=",
        field("target", $.path_expression),
        optional(field("parametrics", $.parametric_arguments)),
        ";",
      ),

    proc_definition: ($) =>
      seq(
        repeat(field("attribute", $.attribute)),
        optional(field("visibility", $.visibility_modifier)),
        "proc",
        field("name", $.identifier),
        optional(field("parametrics", $.parametric_bindings)),
        "{",
        repeat($.proc_item),
        "}",
      ),

    proc_item: ($) =>
      choice(
        $.proc_member,
        $.proc_config,
        $.proc_init,
        $.proc_next,
        $.type_alias,
        $.constant_definition,
        $.const_assert_statement,
      ),

    proc_member: ($) =>
      seq(
        repeat(field("attribute", $.attribute)),
        field("name", $.identifier),
        ":",
        field("type", $.type_annotation),
        optional(choice(";", ",")),
      ),

    proc_config: ($) =>
      seq(
        "config",
        field("parameters", $.parameter_list),
        optional(seq("->", field("return_type", $.type_annotation))),
        field("body", $.block),
      ),

    proc_init: ($) =>
      seq(
        "init",
        optional(field("parameters", $.parameter_list)),
        optional(seq("->", field("return_type", $.type_annotation))),
        field("body", $.block),
      ),

    proc_next: ($) =>
      seq(
        "next",
        field("parameters", $.parameter_list),
        optional(seq("->", field("return_type", $.type_annotation))),
        field("body", $.block),
      ),

    generic_type: (_) => "type",

    builtin_type: (_) =>
      token(
        choice(
          "bits",
          "bool",
          "token",
          "uN",
          "sN",
          "xN",
          /u(?:[1-9]|[1-5][0-9]|6[0-4])/,
          /s(?:[1-9]|[1-5][0-9]|6[0-4])/,
        ),
      ),

    type_path: ($) =>
      prec.right(seq(
        choice($.identifier, "Self"),
        repeat(seq("::", $.identifier)),
        optional(field("arguments", $.parametric_arguments)),
      )),

    tuple_type: ($) =>
      seq(
        "(",
        optional(commaSep1($.type_annotation)),
        optional(","),
        ")",
      ),

    channel_type: ($) =>
      seq(
        "chan",
        "<",
        field("payload", $.type_annotation),
        $._close_angle,
        repeat(field("dimension", $.array_dimension)),
        field("direction", choice("in", "out")),
      ),

    array_type: ($) =>
      prec.right(
        seq(
          field(
            "element",
            choice(
              $.builtin_type,
              $.generic_type,
              $.type_path,
              $.tuple_type,
              $.channel_type,
            ),
          ),
          repeat1(field("dimension", $.array_dimension)),
        ),
      ),

    array_dimension: ($) => seq("[", field("size", $.expression), "]"),

    parametric_arguments: ($) =>
      seq("<", commaSep1($.parametric_argument), optional(","), $._close_angle),

    parametric_argument: ($) =>
      choice(
        $.builtin_type,
        $.generic_type,
        $.tuple_type,
        $.channel_type,
        $.array_type,
        $.expression,
      ),

    block: ($) =>
      seq(
        "{",
        repeat($._statement),
        optional(field("result", $.expression)),
        "}",
      ),

    _statement: ($) =>
      choice(
        $.let_statement,
        $.local_constant_statement,
        $.type_alias,
        $.const_assert_statement,
        $.expression_statement,
      ),

    let_statement: ($) =>
      seq(
        "let",
        field("pattern", $.pattern),
        optional(seq(":", field("type", $.type_annotation))),
        "=",
        field("value", $.expression),
        ";",
      ),

    local_constant_statement: ($) =>
      seq(
        "const",
        field("pattern", $.pattern),
        optional(seq(":", field("type", $.type_annotation))),
        "=",
        field("value", $.expression),
        ";",
      ),

    const_assert_statement: ($) =>
      seq("const_assert!", "(", field("condition", $.expression), ")", ";"),

    expression_statement: ($) => seq($.expression, ";"),

    path_expression: ($) =>
      choice(
        seq(
          choice($.identifier, "self", "in", "out", "Self"),
          repeat(seq("::", $.identifier)),
        ),
        seq(
          choice($.identifier, "Self"),
          repeat(seq("::", $.identifier)),
          field("arguments", $.parametric_arguments),
          repeat1(seq("::", $.identifier)),
        ),
        seq($.builtin_type, repeat1(seq("::", $.identifier))),
      ),

    tuple_expression: ($) =>
      seq(
        "(",
        optional(choice(
          ",",
          seq($.expression, ",", optional(commaSep1($.expression)), optional(",")),
        )),
        ")",
      ),

    array_expression: ($) =>
      seq(
        "[",
        optional(commaSep1($.expression)),
        optional(seq(optional(","), "...")),
        optional(","),
        "]",
      ),

    struct_expression: ($) =>
      prec.dynamic(
        1,
        seq(
          field("type", $.type_path),
          "{",
          optional(commaSep1($.struct_field_initializer)),
          optional(","),
          "}",
        ),
      ),

    struct_field_initializer: ($) =>
      choice(
        seq(field("name", $.identifier), ":", field("value", $.expression)),
        field("shorthand", $.identifier),
        seq("..", field("splat", $.expression)),
      ),

    typed_expression: ($) =>
      prec.dynamic(
        1,
        seq(
          field("type", $.type_annotation),
          ":",
          field(
            "value",
            choice(
              $.integer_literal,
              $.character_literal,
              $.boolean_literal,
              $.array_expression,
              $.tuple_expression,
              $.path_expression,
              $.unary_expression,
              $.typed_expression,
            ),
          ),
        ),
      ),

    pattern: ($) =>
      choice(
        $.identifier,
        $.rest_pattern,
        $.tuple_pattern,
        $.path_expression,
        $.literal_pattern,
        $.range_pattern,
      ),

    rest_pattern: (_) => "..",

    tuple_pattern: ($) =>
      seq("(", optional(commaSep1($.pattern)), optional(","), ")"),

    for_expression: ($) =>
      seq(
        optional("const"),
        choice("for", "unroll_for!"),
        field("pattern", $.pattern),
        optional(seq(":", field("type", $.type_annotation))),
        "in",
        field("iterable", $.expression),
        field("body", $.block),
        "(",
        field("initial_value", $.expression),
        ")",
      ),

    channel_expression: ($) =>
      seq(
        optional(field("attribute", $.attribute)),
        "chan",
        "<",
        field("payload", $.type_annotation),
        optional(seq(",", field("depth", $.parametric_argument))),
        $._close_angle,
        repeat(field("dimension", $.array_dimension)),
        "(",
        field("name", $.expression),
        ")",
      ),

    spawn_expression: ($) =>
      prec.right(seq(
        "spawn",
        field("callee", $.path_expression),
        optional(field("parametrics", $.parametric_arguments)),
        field("arguments", $.argument_list),
        optional(field("next_arguments", $.argument_list)),
      )),

    argument_list: ($) =>
      seq("(", optional(commaSep1($.expression)), optional(","), ")"),

    binary_expression: ($) => {
      const table = [
        [choice("..", "..="), PREC.range],
        ["||", PREC.logical_or],
        ["&&", PREC.logical_and],
        [choice("==", "!=", ">", ">=", "<", "<="), PREC.comparison],
        ["|", PREC.bitwise_or],
        ["^", PREC.bitwise_xor],
        ["&", PREC.bitwise_and],
        [choice("<<", ">>"), PREC.shift],
        [choice("+", "-", "++"), PREC.additive],
        [choice("*", "/", "%"), PREC.multiplicative],
      ];

      return choice(
        ...table.map(([operator, precedence]) =>
          prec.left(
            precedence,
            seq(
              field("left", $.expression),
              field("operator", operator),
              field("right", $.expression),
            ),
          ),
        ),
      );
    },

    call_expression: ($) =>
      choice(
        prec.dynamic(
          1,
          seq(
            field("function", $.path_expression),
            field("parametrics", $.parametric_arguments),
            field("arguments", $.argument_list),
          ),
        ),
        prec.left(
          PREC.call,
          seq(
            field("function", $.builtin_type),
            field("arguments", $.argument_list),
          ),
        ),
        prec.left(
          PREC.call,
          seq(
            field("function", $.expression),
            field("arguments", $.argument_list),
          ),
        ),
      ),

    field_expression: ($) =>
      prec.left(
        PREC.postfix,
        seq(field("value", $.expression), ".", field("field", $.identifier)),
      ),

    labeled_expression: ($) =>
      seq("'", field("label", $.identifier), ":", field("value", $.expression)),

    integer_literal: (_) =>
      token(choice(/0[xX][0-9a-fA-F_]+/, /0[bB][01_]+/, /0|[1-9][0-9]*/)),

    character_literal: (_) =>
      token(seq("'", choice(/[^'\\\n\r]/, /\\(?:[nrt\\0'\"]|x[0-9a-fA-F]{2})/), "'")),

    string_literal: (_) =>
      token(
        seq(
          '"',
          repeat(choice(/[^"\\]/, /\\(?:[nrt\\0'\"]|x[0-9a-fA-F]{2}|u\{[0-9a-fA-F]{1,6}\})/)),
          '"',
        ),
      ),

    identifier: (_) => /[A-Za-z_][A-Za-z0-9_']*/,

    _close_angle: (_) => token(prec(1, ">")),

    line_comment: (_) => token(seq("//", /[^\n\r]*/)),
  },
});

function commaSep1(rule) {
  return seq(rule, repeat(seq(",", rule)));
}
