test/corpus/lexical.txt
==================
Comments, tick identifiers, and labels
==================

// A module comment.
fn lexical<N': u32>(value': uN[N']) -> uN[N'] {
  'loop: for (i, acc) in u32:0..N' {
    // Comments are extras inside expressions.
    acc + value'
  } (uN[N']:0)
}

---

(source_file
  (line_comment)
  (function_definition
    name: (identifier)
    parametrics: (parametric_bindings
      (parametric_binding
        name: (identifier)
        type: (builtin_type)))
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (array_type
          element: (builtin_type)
          dimension: (array_dimension
            size: (path_expression
              (identifier))))))
    return_type: (array_type
      element: (builtin_type)
      dimension: (array_dimension
        size: (path_expression
          (identifier))))
    body: (block
      result: (labeled_expression
        label: (identifier)
        value: (for_expression
          pattern: (pattern
            (tuple_pattern
              (pattern
                (identifier))
              (pattern
                (identifier))))
          iterable: (binary_expression
            left: (typed_expression
              type: (builtin_type)
              value: (integer_literal))
            right: (path_expression
              (identifier)))
          body: (block
            (line_comment)
            result: (binary_expression
              left: (path_expression
                (identifier))
              right: (path_expression
                (identifier))))
          initial_value: (typed_expression
            type: (array_type
              element: (builtin_type)
              dimension: (array_dimension
                size: (path_expression
                  (identifier))))
            value: (integer_literal)))))))

==================
Escaped characters and strings
==================

fn escapes() {
  let quote = '\'';
  let hex = '\x41';
  let text = "tab:\t slash:\\ unicode:\u{3bb}";
  (quote, hex, text)
}

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (let_statement
        pattern: (pattern
          (identifier))
        value: (character_literal))
      (let_statement
        pattern: (pattern
          (identifier))
        value: (character_literal))
      (let_statement
        pattern: (pattern
          (identifier))
        value: (string_literal))
      result: (tuple_expression
        (path_expression
          (identifier))
        (path_expression
          (identifier))
        (path_expression
          (identifier))))))
