test/corpus/procs.txt
==================
Legacy proc, channel declaration, and spawn
==================

proc Child<N: u32> {
  output: chan<uN[N]> out;
  config(output: chan<uN[N]> out) { (output,) }
  init { uN[N]:0 }
  next(state: uN[N]) {
    let tok = send(join(), output, state);
    state + uN[N]:1
  }
}

#[test_proc]
proc Network {
  output: chan<u8> out;
  config() {
    let (sender, receiver) = chan<u8, u32:1>("network");
    spawn Child<u32:8>(sender)(u8:0);
    (receiver,)
  }
  init { u8:0 }
  next(state: u8) { state }
}

---

(source_file
  (proc_definition
    name: (identifier)
    parametrics: (parametric_bindings
      (parametric_binding
        name: (identifier)
        type: (builtin_type)))
    (proc_item
      (proc_member
        name: (identifier)
        type: (channel_type
          payload: (array_type
            element: (builtin_type)
            dimension: (array_dimension
              size: (path_expression
                (identifier)))))))
    (proc_item
      (proc_config
        parameters: (parameter_list
          (parameter
            name: (identifier)
            type: (channel_type
              payload: (array_type
                element: (builtin_type)
                dimension: (array_dimension
                  size: (path_expression
                    (identifier)))))))
        body: (block
          result: (tuple_expression
            (path_expression
              (identifier))))))
    (proc_item
      (proc_init
        body: (block
          result: (typed_expression
            type: (array_type
              element: (builtin_type)
              dimension: (array_dimension
                size: (path_expression
                  (identifier))))
            value: (integer_literal)))))
    (proc_item
      (proc_next
        parameters: (parameter_list
          (parameter
            name: (identifier)
            type: (array_type
              element: (builtin_type)
              dimension: (array_dimension
                size: (path_expression
                  (identifier))))))
        body: (block
          (let_statement
            pattern: (pattern
              (identifier))
            value: (call_expression
              function: (path_expression
                (identifier))
              arguments: (argument_list
                (call_expression
                  function: (path_expression
                    (identifier))
                  arguments: (argument_list))
                (path_expression
                  (identifier))
                (path_expression
                  (identifier)))))
          result: (binary_expression
            left: (path_expression
              (identifier))
            right: (typed_expression
              type: (array_type
                element: (builtin_type)
                dimension: (array_dimension
                  size: (path_expression
                    (identifier))))
              value: (integer_literal)))))))
  (proc_definition
    attribute: (attribute
      (attribute_body
        name: (identifier)))
    name: (identifier)
    (proc_item
      (proc_member
        name: (identifier)
        type: (channel_type
          payload: (builtin_type))))
    (proc_item
      (proc_config
        parameters: (parameter_list)
        body: (block
          (let_statement
            pattern: (pattern
              (tuple_pattern
                (pattern
                  (identifier))
                (pattern
                  (identifier))))
            value: (channel_expression
              payload: (builtin_type)
              depth: (parametric_argument
                (typed_expression
                  type: (builtin_type)
                  value: (integer_literal)))
              name: (string_literal)))
          (expression_statement
            (spawn_expression
              callee: (path_expression
                (identifier))
              parametrics: (parametric_arguments
                (parametric_argument
                  (typed_expression
                    type: (builtin_type)
                    value: (integer_literal))))
              arguments: (argument_list
                (path_expression
                  (identifier)))
              next_arguments: (argument_list
                (typed_expression
                  type: (builtin_type)
                  value: (integer_literal)))))
          result: (tuple_expression
            (path_expression
              (identifier))))))
    (proc_item
      (proc_init
        body: (block
          result: (typed_expression
            type: (builtin_type)
            value: (integer_literal)))))
    (proc_item
      (proc_next
        parameters: (parameter_list
          (parameter
            name: (identifier)
            type: (builtin_type)))
        body: (block
          result: (path_expression
            (identifier)))))))

==================
Impl-style proc and proc alias
==================

proc Counter<N: u32> { output: chan<uN[N]> out, amount: uN[N], }
proc ByteCounter = Counter<u32:8>;

impl Counter<u32:8> {
  fn config(output: chan<u8> out, amount: u8) -> (Self,) { (Self { output, amount },) }
  fn init() -> u8 { u8:0 }
  fn next(self: Self, state: u8) -> u8 {
    let tok = send(join(), self.output, state);
    state + self.amount
  }
}

---

(source_file
  (proc_definition
    name: (identifier)
    parametrics: (parametric_bindings
      (parametric_binding
        name: (identifier)
        type: (builtin_type)))
    (proc_item
      (proc_member
        name: (identifier)
        type: (channel_type
          payload: (array_type
            element: (builtin_type)
            dimension: (array_dimension
              size: (path_expression
                (identifier)))))))
    (proc_item
      (proc_member
        name: (identifier)
        type: (array_type
          element: (builtin_type)
          dimension: (array_dimension
            size: (path_expression
              (identifier)))))))
  (proc_alias
    name: (identifier)
    target: (path_expression
      (identifier))
    parametrics: (parametric_arguments
      (parametric_argument
        (typed_expression
          type: (builtin_type)
          value: (integer_literal)))))
  (impl_block
    type: (type_path
      (identifier)
      arguments: (parametric_arguments
        (parametric_argument
          (typed_expression
            type: (builtin_type)
            value: (integer_literal)))))
    (impl_member
      (function_definition
        name: (identifier)
        parameters: (parameter_list
          (parameter
            name: (identifier)
            type: (channel_type
              payload: (builtin_type)))
          (parameter
            name: (identifier)
            type: (builtin_type)))
        return_type: (tuple_type
          (type_path))
        body: (block
          result: (tuple_expression
            (struct_expression
              type: (type_path)
              (struct_field_initializer
                shorthand: (identifier))
              (struct_field_initializer
                shorthand: (identifier)))))))
    (impl_member
      (function_definition
        name: (identifier)
        parameters: (parameter_list)
        return_type: (builtin_type)
        body: (block
          result: (typed_expression
            type: (builtin_type)
            value: (integer_literal)))))
    (impl_member
      (function_definition
        name: (identifier)
        parameters: (parameter_list
          (parameter
            type: (type_path))
          (parameter
            name: (identifier)
            type: (builtin_type)))
        return_type: (builtin_type)
        body: (block
          (let_statement
            pattern: (pattern
              (identifier))
            value: (call_expression
              function: (path_expression
                (identifier))
              arguments: (argument_list
                (call_expression
                  function: (path_expression
                    (identifier))
                  arguments: (argument_list))
                (field_expression
                  value: (path_expression)
                  field: (identifier))
                (path_expression
                  (identifier)))))
          result: (binary_expression
            left: (path_expression
              (identifier))
            right: (field_expression
              value: (path_expression)
              field: (identifier))))))))
