test/corpus/recovery.txt
==================
Incomplete expression preserves the following function
==================

fn broken(x: u32) -> u32 {
  x +
}

fn intact() -> u32 { u32:42 }

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (builtin_type)))
    return_type: (builtin_type)
    body: (block
      result: (binary_expression
        left: (path_expression
          (identifier))
        right: (path_expression
          (MISSING identifier)))))
  (function_definition
    name: (identifier)
    parameters: (parameter_list)
    return_type: (builtin_type)
    body: (block
      result: (typed_expression
        type: (builtin_type)
        value: (integer_literal)))))

==================
Incomplete parametrics preserve the following constant
==================

fn broken<N: u32(x: u32) -> u32 { x }
const AFTER = u32:1;

---

(source_file
  (function_definition
    name: (identifier)
    parametrics: (parametric_bindings
      (parametric_binding
        name: (identifier)
        type: (builtin_type))
      (MISSING ">"))
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (builtin_type)))
    return_type: (builtin_type)
    body: (block
      result: (path_expression
        (identifier))))
  (constant_definition
    name: (identifier)
    value: (typed_expression
      type: (builtin_type)
      value: (integer_literal))))

==================
Unclosed proc member type preserves local recovery
==================

proc Broken {
  input: chan<u32 in;
  output: chan<u32> out;
}

---

(source_file
  (proc_definition
    name: (identifier)
    (ERROR
      (identifier)
      (ERROR
        (builtin_type)
        (identifier)
        (identifier))
      (channel_type
        payload: (builtin_type)))))
