test/corpus/types.txt
==================
Aliases, tuples, arrays, and channels
==================

type Pair = (u32, bool);
type Matrix = u8[4][4];
type Input = chan<u8>[2] in;

---

(source_file
  (type_alias
    name: (identifier)
    type: (tuple_type
      (builtin_type)
      (builtin_type)))
  (type_alias
    name: (identifier)
    type: (array_type
      element: (builtin_type)
      dimension: (array_dimension
        size: (integer_literal))
      dimension: (array_dimension
        size: (integer_literal))))
  (type_alias
    name: (identifier)
    type: (channel_type
      payload: (builtin_type)
      dimension: (array_dimension
        size: (integer_literal)))))

==================
Structs, enums, impl members, and qualified constants
==================

struct Point<N: u32> { x: uN[N], y: uN[N] }
enum Direction : u2 { NORTH = u2:0, EAST = u2:1, SOUTH = u2:2, WEST = u2:3 }

impl Point<u32:8> {
  const ORIGIN: Self = Point { x: u8:0, y: u8:0 };
  fn area(self: Self) -> u8 { self.x * self.y }
}

fn max() -> u32 { u32::MAX }

---

(source_file
  (struct_definition
    name: (identifier)
    parametrics: (parametric_bindings
      (parametric_binding
        name: (identifier)
        type: (builtin_type)))
    body: (struct_body
      (struct_member
        name: (identifier)
        type: (array_type
          element: (builtin_type)
          dimension: (array_dimension
            size: (path_expression
              (identifier)))))
      (struct_member
        name: (identifier)
        type: (array_type
          element: (builtin_type)
          dimension: (array_dimension
            size: (path_expression
              (identifier)))))))
  (enum_definition
    name: (identifier)
    underlying_type: (builtin_type)
    (enum_member
      name: (identifier)
      value: (typed_expression
        type: (builtin_type)
        value: (integer_literal)))
    (enum_member
      name: (identifier)
      value: (typed_expression
        type: (builtin_type)
        value: (integer_literal)))
    (enum_member
      name: (identifier)
      value: (typed_expression
        type: (builtin_type)
        value: (integer_literal)))
    (enum_member
      name: (identifier)
      value: (typed_expression
        type: (builtin_type)
        value: (integer_literal))))
  (impl_block
    type: (type_path
      (identifier)
      arguments: (parametric_arguments
        (parametric_argument
          (typed_expression
            type: (builtin_type)
            value: (integer_literal)))))
    (impl_member
      (constant_definition
        name: (identifier)
        type: (type_path)
        value: (struct_expression
          type: (type_path
            (identifier))
          (struct_field_initializer
            name: (identifier)
            value: (typed_expression
              type: (builtin_type)
              value: (integer_literal)))
          (struct_field_initializer
            name: (identifier)
            value: (typed_expression
              type: (builtin_type)
              value: (integer_literal))))))
    (impl_member
      (function_definition
        name: (identifier)
        parameters: (parameter_list
          (parameter
            type: (type_path)))
        return_type: (builtin_type)
        body: (block
          result: (binary_expression
            left: (field_expression
              value: (path_expression)
              field: (identifier))
            right: (field_expression
              value: (path_expression)
              field: (identifier)))))))
  (function_definition
    name: (identifier)
    parameters: (parameter_list)
    return_type: (builtin_type)
    body: (block
      result: (path_expression
        (builtin_type)
        (identifier)))))

==================
Nested typed values and struct update
==================

fn values<N: u32>(p: Point<N>) {
  let a = u32[3]:[1, 2, 3];
  let b = (u8, u16):(u8:1, u16:2);
  let c = Point<N> { x: uN[N]:0, y: uN[N]:1, ..p };
  (a, b, c)
}

---

(source_file
  (function_definition
    name: (identifier)
    parametrics: (parametric_bindings
      (parametric_binding
        name: (identifier)
        type: (builtin_type)))
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (type_path
          (identifier)
          arguments: (parametric_arguments
            (parametric_argument
              (path_expression
                (identifier)))))))
    body: (block
      (let_statement
        pattern: (pattern
          (identifier))
        value: (typed_expression
          type: (array_type
            element: (builtin_type)
            dimension: (array_dimension
              size: (integer_literal)))
          value: (array_expression
            (integer_literal)
            (integer_literal)
            (integer_literal))))
      (let_statement
        pattern: (pattern
          (identifier))
        value: (typed_expression
          type: (tuple_type
            (builtin_type)
            (builtin_type))
          value: (tuple_expression
            (typed_expression
              type: (builtin_type)
              value: (integer_literal))
            (typed_expression
              type: (builtin_type)
              value: (integer_literal)))))
      (let_statement
        pattern: (pattern
          (identifier))
        value: (struct_expression
          type: (type_path
            (identifier)
            arguments: (parametric_arguments
              (parametric_argument
                (path_expression
                  (identifier)))))
          (struct_field_initializer
            name: (identifier)
            value: (typed_expression
              type: (array_type
                element: (builtin_type)
                dimension: (array_dimension
                  size: (path_expression
                    (identifier))))
              value: (integer_literal)))
          (struct_field_initializer
            name: (identifier)
            value: (typed_expression
              type: (array_type
                element: (builtin_type)
                dimension: (array_dimension
                  size: (path_expression
                    (identifier))))
              value: (integer_literal)))
          (struct_field_initializer
            splat: (path_expression
              (identifier)))))
      result: (tuple_expression
        (path_expression
          (identifier))
        (path_expression
          (identifier))
        (path_expression
          (identifier))))))
